--- a/projects/operative-situation/src/styles/fieldset.less
+++ b/projects/operative-situation/src/styles/fieldset.less
@@ -10,6 +10,7 @@ fieldset {
     padding: 3px 10px;
     font-family: 'Open Sans Regular';
     font-size: 15px;
+    line-height: 15px;
     color: #607d8b;
     background: transparent;
   }
