--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
@@ -1,159 +1,171 @@
 <app-form-with-steps
-  [caption]="'Отчет об оперативной обстановке на ' +  (selectedPeriod$ | async)?.time"
+  [caption]="'Отчет об оперативной обстановке'"
   (action)="addReport()"
   [actionDisabled]="equipment35150Form.invalid || equipmentNetworkForm.invalid || resourcesForm.invalid || violationsForm.invalid || (isLoadingInProgress$ | async)"
   [actionTitle]="'Опубликовать отчет'">
+
+  <!-- Start: Оборудование 35-150 кВ -->
   <app-form-step
     [caption]="'Оборудование 35-150 кВ'"
     [description]="'Оборудование и последствия'"
     [icon]="'fas fa-charging-station'"
     [isInvalid]="equipment35150Form.invalid">
-    <div class="container-fluid h-100">
-      <div class="row h-100">
-        <div class="col-6 border-right" [formGroup]="equipment35150Form">
-          <div class="section-caption mb-5">Оборудование</div>
-
+    <form class="h-100 d-flex flex-column justify-content-around"
+          [formGroup]="equipment35150Form">
+      <!-- Start: Оборудование -->
+      <fieldset class="mb-3">
+        <legend>Оборудование</legend>
+        <div class="container-fluid">
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>ЛЭП 110-150 кВ, шт.</mat-label>
-                <input type="number" matInput formControlName="lep_110_150">
+                <input matInput type="number" formControlName="lep_110_150">
               </mat-form-field>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>ЛЭП 35 кВ, шт.</mat-label>
-                <input type="number"  matInput formControlName="lep_35">
+                <input matInput type="number" formControlName="lep_35">
               </mat-form-field>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>ПС 110 -150 кВ, шт.</mat-label>
-                <input type="number" matInput formControlName="ps_110_150">
+                <mat-label>ПС 110-150 кВ, шт.</mat-label>
+                <input matInput type="number" formControlName="ps_110_150">
               </mat-form-field>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>ПС 35 кВ, шт.</mat-label>
-                <input type="number" matInput formControlName="ps_35">
+                <input matInput type="number" formControlName="ps_35">
               </mat-form-field>
             </div>
           </div>
         </div>
-        <div class="col-6" [formGroup]="equipment35150Form">
-          <div class="section-caption mb-5">Последствия для потребителей</div>
+      </fieldset>
+      <!-- End: Оборудование -->
 
+      <!-- Start: Последствия для потребителей -->
+      <fieldset class="mb-3">
+        <legend>Последствия для потребителей</legend>
+        <div class="container-fluid">
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
                 <mat-label>ТП 6-20 кВ, шт.</mat-label>
-                <input type="number" type="number" matInput formControlName="tp_6_20_effect_110_150">
+                <input matInput type="number" formControlName="tp_6_20_effect_110_150">
+              </mat-form-field>
+            </div>
+
+            <div class="col-6">
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-label>Население, чел.</mat-label>
+                <input matInput type="number" formControlName="population_effect_110_150">
               </mat-form-field>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Население, чел</mat-label>
-                <input matInput formControlName="population_effect_110_150">
+                <mat-label>Нагрузка, МВт.</mat-label>
+                <input matInput type="number" formControlName="power_effect_110_150">
               </mat-form-field>
             </div>
-          </div>
 
-          <div class="row">
-            <div class="col-12">
+            <div class="col-6">
               <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Нагрузка, МВт</mat-label>
-                <input matInput formControlName="power_effect_110_150">
-              </mat-form-field>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>СЗО, шт</mat-label>
-                <input matInput formControlName="szo_effect_110_150">
+                <mat-label>СЗО, шт.</mat-label>
+                <input matInput type="number" formControlName="szo_effect_110_150">
               </mat-form-field>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </fieldset>
+      <!-- End: Последствия для потребителей -->
+    </form>
   </app-form-step>
+  <!-- End: Оборудование 35-150 кВ -->
 
+  <!-- Start: Распределительная сеть -->
   <app-form-step
     [caption]="'Распределительная сеть'"
     [description]="'Оборудование и последствия'"
     [icon]="'fas fa-plug'"
     [isInvalid]="equipmentNetworkForm.invalid">
-    <div class="container-fluid h-100">
-      <div class="row h-100">
-        <div class="col-6 border-right" [formGroup]="equipmentNetworkForm">
-          <div class="section-caption mb-5">Оборудование</div>
-
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>ЛЭП 6-20 кВ, шт.</mat-label>
-                <input type="number" matInput formControlName="lep_6_20">
-              </mat-form-field>
+    <div class="h-100 d-flex flex-column justify-content-center">
+      <div class="container-fluid pl-0 pr-0"
+           [formGroup]="equipmentNetworkForm">
+        <div class="row h-100 d-flex flex-column justify-content-center">
+          <div class="col-12 d-flex flex-row justify-content-center">
+            <!-- Start: Оборудование -->
+            <div class="col-6 border-right d-flex flex-column justify-content-start">
+              <div class="section-caption mb-5">Оборудование</div>
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>ЛЭП 6-20 кВ, шт.</mat-label>
+                    <input matInput type="number" formControlName="lep_6_20">
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>ТП 6-20 кВ, шт.</mat-label>
+                    <input matInput type="number" formControlName="tp_6_20">
+                  </mat-form-field>
+                </div>
+              </div>
             </div>
-          </div>
+            <!-- End: Оборудование -->
 
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>ТП 6-20 кВ, шт.</mat-label>
-                <input type="number"  matInput formControlName="tp_6_20">
-              </mat-form-field>
-            </div>
-          </div>
-        </div>
-        <div class="col-6" [formGroup]="equipmentNetworkForm">
-          <div class="section-caption mb-5">Последствия для потребителей</div>
+            <!-- Start: Последствия для потребителей -->
+            <div class="col-6 d-flex flex-column justify-content-start">
+              <div class="section-caption mb-5">Последствия для потребителей</div>
 
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Население, чел</mat-label>
-                <input type="number" type="number" matInput formControlName="population_effect_network">
-              </mat-form-field>
-            </div>
-          </div>
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>Население, чел.</mat-label>
+                    <input matInput type="number" formControlName="population_effect_network">
+                  </mat-form-field>
+                </div>
+              </div>
 
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>Нагрузка, МВт</mat-label>
-                <input matInput formControlName="power_effect_network">
-              </mat-form-field>
-            </div>
-          </div>
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>Нагрузка, МВт.</mat-label>
+                    <input matInput type="number" formControlName="power_effect_network">
+                  </mat-form-field>
+                </div>
+              </div>
 
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="fill" class="w-100">
-                <mat-label>СЗО, шт.</mat-label>
-                <input matInput formControlName="szo_effect_network">
-              </mat-form-field>
+              <div class="row">
+                <div class="col-12">
+                  <mat-form-field appearance="fill" class="w-100">
+                    <mat-label>СЗО, шт.</mat-label>
+                    <input matInput type="number" formControlName="szo_effect_network">
+                  </mat-form-field>
+                </div>
+              </div>
             </div>
+            <!-- End: Последствия для потребителей -->
           </div>
         </div>
       </div>
     </div>
   </app-form-step>
+  <!-- End: Распределительная сеть -->
 
+  <!-- Start: Задействованные ресурсы -->
   <app-form-step
     [caption]="'Задейств. ресурсы'"
     [description]="'Люди, бригады, техника'"
@@ -161,7 +173,8 @@
     [isInvalid]="resourcesForm.invalid">
     <div class="container-fluid h-100">
       <div class="row h-100">
-        <div class="col-6 border-right" [formGroup]="resourcesForm">
+        <div class="col-6 border-right d-flex flex-column justify-content-center"
+             [formGroup]="resourcesForm">
           <div class="section-caption mb-5">Задействованные РИСЭ</div>
 
           <div class="row">
@@ -191,7 +204,8 @@
             </div>
           </div>
         </div>
-        <div class="col-6" [formGroup]="resourcesForm">
+        <div class="col-6 d-flex flex-column justify-content-center"
+             [formGroup]="resourcesForm">
           <div class="section-caption mb-5">Задействованные силы и средства</div>
 
           <div class="row">
@@ -224,7 +238,9 @@
       </div>
     </div>
   </app-form-step>
+  <!-- End: Задействованные ресурсы -->
 
+  <!-- Start: Нарушения -->
   <app-form-step
     [caption]="'Нарушения'"
     [description]="'Сеть 35 кВ и сеть 0,4 кВ'"
@@ -326,9 +342,10 @@
 
     </form>
   </app-form-step>
+  <!-- End: Нарушения -->
 
+  <!-- Start: Погодные условия -->
   <app-form-step
-    class="h-100"
     [caption]="'Погодные условия'"
     [description]="'Режим ОРР / РПГ'"
     [icon]="'fas fa-sun'"
@@ -348,5 +365,6 @@
         </div>
     </form>
   </app-form-step>
+  <!-- End: Погодные условия -->
 
 </app-form-with-steps>
