OSR2: Report layaout refactored

--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
@@ -57,7 +57,7 @@
 
         <!-- Start: Последствия для потребителей -->
         <div class="col-6 d-flex flex-column justify-content-start">
-          <div class="section-caption mb-5">Задействованные силы и средства</div>
+          <div class="section-caption mb-5">Последствия для потребителей</div>
 
           <div class="row">
             <div class="col-12">
