--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.less
@@ -271,17 +271,20 @@
   }
 }
 
-
-
+@panel-indicator-group-caption-height: 10px;
+@panel-indicator-group-caption-font-family: 'Open Sans Light';
+@panel-indicator-group-caption-font-size: 14px;
+@panel-indicator-group-caption-font-color: #00695c;
+@panel-indicator-group-caption-border-color: #eceff1;
 @panel-indicator-width: 70px;
 @panel-indicator-height: 70px;
-@panel-indicator-border-color: #cfd8dc;
+@panel-indicator-border-color: #eceff1;
 @panel-indicator-font-family: 'Open Sans Light';
 @panel-indicator-header-height: 20px;
-@panel-indicator-header-background-color: #4db6ac;
+@panel-indicator-header-background-color: #eceff1;
 @panel-indicator-header-font-family: 'Open Sans Light';
 @panel-indicator-header-font-size: 11px;
-@panel-indicator-header-font-color: white;
+@panel-indicator-header-font-color: #455a64;
 @panel-indicator-title-font-size: 11px;
 @panel-indicator-title-font-color: #78909c;
 @panel-indicator-value-font-family: 'Open Sans Light';
@@ -292,21 +295,60 @@
 .indicator-panel {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  // min-width: 1255px;
 
   .indicator-group {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    margin-top: 7px;
+    //margin-right: 10px;
 
-    .caption {}
+    &:last-of-type {
+      margin-right: 0px;
+    }
+
+    .caption {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+      flex-grow: 0;
+      // width: min-content;
+      height: @panel-indicator-group-caption-height;
+      //margin-left: 15px;
+      //margin-right: 15px;
+      margin-bottom: 20px;
+      border-style: solid;
+      border-width: 1px;
+      border-color: @panel-indicator-group-caption-border-color;
+      border-bottom: none;
+      border-right: none;
+      border-left: none;
+
+      .title {
+        margin-top: -8px;
+        padding-left: 15px;
+        padding-right: 15px;
+        font-family: @panel-indicator-group-caption-font-family;
+        font-size: @panel-indicator-group-caption-font-size;
+        line-height: @panel-indicator-group-caption-font-size;
+        color: @panel-indicator-group-caption-font-color;
+        background: white;
+      }
+    }
 
     .indicators {
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
 
       .indicators-with-header {
         display: flex;
         flex-direction: column;
-        margin-right: 10px;
+        width: 100%;
+        margin-right: 15px;
 
         &:last-of-type {
           margin-right: 0px;
@@ -334,26 +376,38 @@
           .indicator {
             display: flex;
             flex-direction: column;
-            width: @panel-indicator-width;
+            flex: 1;
+            // width: @panel-indicator-width;
+            min-width: @panel-indicator-width;
             height: @panel-indicator-height;
             padding: 5px;
             border: 1px solid @panel-indicator-border-color;
             border-right: none;
             border-top: none;
-            // border-radius: 0px;
 
             &:first-of-type {
               border-top-left-radius: 0px;
-              // border-bottom-left-radius: 4px;
             }
 
             &:last-of-type {
-              border-right: 1px solid #cfd8dc;
+              border-right: 1px solid #eceff1;
               border-top-right-radius: 0px;
-              // border-bottom-right-radius: 4px;
+            }
+
+            &.highlighted {
+              background: #fffde7;
+            }
+
+            &.empty {
+              background: #fafafa;
+            }
+
+            &.no-header {
+              border-top: 1px solid #eceff1;
             }
 
             .title {
+              min-height: 22px;
               font-family: @panel-indicator-font-family;
               font-size: @panel-indicator-title-font-size;
               line-height: @panel-indicator-title-font-size;
