--- a/projects/operative-situation/src/app/features/operative-situation/components/weather-summary/weather-summary.component.less
+++ b/projects/operative-situation/src/app/features/operative-situation/components/weather-summary/weather-summary.component.less
@@ -10,6 +10,7 @@
 @weather-summary-locations-font-color: #37474f;
 
 .weather-summary {
+  height: 100%;
   padding: 20px;
   background: @weather-summary-background-color;
   border-radius: @weather-summary-border-radius;
@@ -17,6 +18,7 @@
 
   table {
     width: 100%;
+    height: 100%;
     font-family: @weather-summary-font-family;
 
     thead {
@@ -51,6 +53,7 @@
 
         td {
           font-size: @weather-summary-locations-font-size;
+          line-height: @weather-summary-locations-font-size;
           color: @weather-summary-locations-font-color;
 
           &:first-of-type {
