OSR2: Some report UI fixes

--- a/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report-add-dialog/report-add-dialog.component.html
@@ -371,9 +371,9 @@
 
   <!-- Start: Погодные условия -->
   <app-form-step
-    [caption]="'Погодные условия'"
-    [description]="'Режим ОРР / РПГ'"
-    [icon]="'fas fa-sun'"
+    [caption]="'Режим работы'"
+    [description]="'ОРР / РПГ'"
+    [icon]="'fas fa-bolt'"
     [isInvalid]="weatherForm.invalid">
     <form [formGroup]="weatherForm" class="h-100">
         <div class="container-fluid h-100">
