--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -265,9 +265,18 @@
             <div class="row d-flex flex-column flex-grow-1">
               <div class="col-12">
                 <div class="panel indicator-panel h-100 flex-column justify-content-center align-items-center flex-grow-1 mat-elevation-z1">
-                  <div class="value">1250</div>
-                  <div class="label">Максимум потребления за прошедшие сутки</div>
-                  <button mat-stroked-button class="mt-3" color="primary">Изменить</button>
+                  <div *ngIf="!inEditConsumptionMode">
+                    <div class="value">{{(selectedReport$ | async)?.consumption ? (selectedReport$ | async)?.consumption : 0}}</div>
+                    <div class="label">Максимум потребления за прошедшие сутки</div>
+                    <button mat-stroked-button class="mt-3" color="primary" (click)="inEditConsumptionMode = !inEditConsumptionMode">Изменить</button>
+                  </div>
+                  <div *ngIf="inEditConsumptionMode"
+                                [formGroup]="consumptionForm">
+                    <mat-form-field appearance="fill" class="w-100">
+                      <mat-label>Потребление</mat-label>
+                      <input matInput type="number" min="0" formControlName="consumption">
+                    </mat-form-field>
+                  </div>
                 </div>
               </div>
             </div>
@@ -324,7 +333,7 @@
                   </div>
                   <div class="indicators">
                     <div class="indicators-without-header">
-                      <div class="indicator">
+                      <div class="indicator border-right-0">
                         <span class="title">Всего 6 кВ и выше</span>
                         <span class="value">{{(selectedReport$ | async)?.violations.total_6}}</span>
                       </div>
@@ -352,11 +361,11 @@
                       </div>
                     </div>
                     <div class="indicators-without-header">
-                      <div class="indicator">
+                      <div class="indicator border-left-0">
                         <span class="title">ЛЭП р/с</span>
                         <span class="value">{{(selectedReport$ | async)?.violations.lep_rs}}</span>
                       </div>
-                      <div class="indicator">
+                      <div class="indicator border-left-0">
                         <span class="title">ТН с погаш.</span>
                         <span class="value">{{(selectedReport$ | async)?.violations.tn_cancel}}</span>
                       </div>
@@ -369,26 +378,31 @@
                     <span class="title">Сеть 0,4 кВ</span>
                   </div>
                   <div class="indicators">
-                    <div class="indicators-with-header">
+                    <div class="indicators-without-header">
                       <!--<div class="header">По сети 35-150 кВ</div>-->
                       <div class="body">
-                        <div class="indicator no-header">
+                        <div class="indicator no-header border-right-0">
                           <span class="title">С 6:00</span>
                           <span class="value">{{(selectedReport$ | async)?.violations.from_6_04}}</span>
                         </div>
-                        <div class="indicator no-header">
+                        <div class="indicator no-header border-right-0">
                           <span class="title">Откл. на срез</span>
                           <span class="value">{{(selectedReport$ | async)?.violations.power_off_04}}</span>
                         </div>
-                        <div class="indicator no-header">
+                        <div class="indicator no-header border-right-0">
                           <span class="title">Более 3 часов</span>
                           <span class="value">{{(selectedReport$ | async)?.violations.greater_3_04}}</span>
                         </div>
-                        <div class="indicator no-header">
+                      </div>
+                    </div>
+                    <div class="indicators-with-header">
+                      <div class="header">Население, чел.</div>
+                      <div class="body">
+                        <div class="indicator">
                           <span class="title">По сети 0,4 кВ на срез</span>
                           <span class="value">{{(selectedReport$ | async)?.violations.population_srez_04}}</span>
                         </div>
-                        <div class="indicator no-header">
+                        <div class="indicator">
                           <span class="title">По сети 0,4 кВ (более 3 часов)</span>
                           <span class="value">{{(selectedReport$ | async)?.violations.population_greater_3_04}}</span>
                         </div>
