--- a/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
+++ b/projects/operative-situation/src/app/features/operative-situation/components/report/report.component.html
@@ -265,17 +265,44 @@
             <div class="row d-flex flex-column flex-grow-1">
               <div class="col-12">
                 <div class="panel indicator-panel h-100 flex-column justify-content-center align-items-center flex-grow-1 mat-elevation-z1">
-                  <div *ngIf="!inEditConsumptionMode">
-                    <div class="value">{{(selectedReport$ | async)?.consumption ? (selectedReport$ | async)?.consumption : 0}}</div>
+                  <div class="d-flex flex-column justify-content-center align-items-center"
+                       *ngIf="!inEditConsumptionMode">
+                    <div class="value">{{(consumption$ | async) ? (consumption$ | async) : 0}}</div>
                     <div class="label">Максимум потребления за прошедшие сутки</div>
-                    <button mat-stroked-button class="mt-3" color="primary" (click)="inEditConsumptionMode = !inEditConsumptionMode">Изменить</button>
+                    <button mat-stroked-button
+                            class="mt-3"
+                            color="primary"
+                            *ngIf="(selectedDivision$ | async)"
+                            [disabled]="(loadingInProgress$ | async)"
+                            (click)="inEditConsumptionMode = !inEditConsumptionMode">
+                      Изменить
+                    </button>
                   </div>
-                  <div *ngIf="inEditConsumptionMode"
-                                [formGroup]="consumptionForm">
+                  <div class="d-flex flex-column justify-content-center align-items-center"
+                       *ngIf="inEditConsumptionMode"
+                       [formGroup]="consumptionForm">
                     <mat-form-field appearance="fill" class="w-100">
                       <mat-label>Потребление</mat-label>
                       <input matInput type="number" min="0" formControlName="consumption">
                     </mat-form-field>
+                    <div class="d-flex flex-row justify-content-between">
+                      <button mat-stroked-button
+                              class="ml-1"
+                              color="primary"
+                              [disabled]="consumptionForm.invalid || (isConsumptionLoading$ | async)"
+                              (click)="addConsumption()">
+                        Сохранить
+                      </button>
+                      <button mat-icon-button
+                              class="ml-1"
+                              color="primary"
+                              matTooltip="Отмена"
+                              matTooltipPosition="above"
+                              [disabled]="consumptionForm.invalid || (isConsumptionLoading$ | async)"
+                              (click)="this.inEditConsumptionMode = !this.inEditConsumptionMode">
+                        <mat-icon>clear</mat-icon>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
