--- a/projects/operative-situation/src/styles.less
+++ b/projects/operative-situation/src/styles.less
@@ -4,7 +4,7 @@
 @import './styles/fonts';
 @import './styles/fieldset';
 @import './styles/sign-in-dialog';
-@import './styles/sign-in-backdrop';
+@import './styles/backdrops';
 @import './styles/form-step-dialog';
 @import './styles/sidebar'; @import './styles/reports';
 
